samples/_failures_safe/1761525943_e68231_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6013b7fd.c: In function ‘main’:
./samples/SAFE/__tmp_6013b7fd.c:164:12: error: missing terminating " character
  164 |     printf("Graph has %d nodes and %
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6013b7fd.c:164:5: error: expected expression at end of input
  164 |     printf("Graph has %d nodes and %
      |     ^~~~~~
./samples/SAFE/__tmp_6013b7fd.c:164:5: error: expected declaration or statement at end of input
